# Kafka-01

./: Makefile  README.md  docker-compose.yml
kafka/: docker-compose.yml
str_consumer/: Dockerfile  docker-compose.yml  pyproject.toml
str_consumer/config/: .env
str_consumer/str_consumer/: kafka_consumer.py  main.py
str_producer/: Dockerfile  docker-compose.yml  pyproject.toml
str_producer/config/: .env
str_producer/str_producer/: main.py
