[tool.poetry]
name = "str-consumer"
version = "0.1.0"
description = ""
authors = ["Max Simões dos Santos <max.santos@tpv-tech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0.post1"
confluent-kafka = "^2.3.0"

[tool.poetry.scripts]
start = "str_consumer.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"