[tool.poetry]
name = "str_producer"
version = "0.1.0"
description = ""
authors = ["Max Simões dos Santos <max.santos@tpv-tech.com>"]


[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
path = ".venv"
